ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  labels:
    kcert.dev/ingress: "managed"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - radhika.agileguru.org
    secretName: radhika-agileguru-org
  rules:
  - host: radhika.agileguru.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo-service
            port: 
                number: 80
