sagar.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sagar-ingress
  namespace: default
  labels:
    kcert.dev/ingress: "managed"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = '' ) {
        rewrite ^ https://www.$request_uri permanent;
      }
spec:
  tls:
  - hosts:
    - sagar.agileguru.org
    secretName: sagar-agileguru-org
  rules:
  - host: sagar.agileguru.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo-service
            port: 
                number: 80
